--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,15 @@
 	"author": "@angelobordin",
 	"license": "ISC",
 	"devDependencies": {
-		"nodemon": "^3.0.1",
-		"prisma": "^5.5.2"
+		"nodemon": "^3.0.1"
 	},
 	"dependencies": {
+		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
-		"express": "^4.18.2"
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
+		"mongodb": "^6.2.0"
 	},
 	"prettier": {
 		"printWidth": 200,
