--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,3 @@
+SERVER_POST=8080
 TOKEN_SECRET=SEGREDO_SUPER_SECRETO
 MONGO_URL="mongodb://[USER_ROOT]:[SENHA_ROOT]@[HOST]:[PORT]/[DATABASE]?authSource=admin"
