--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,30 @@ version: "3"
 
 services:
   frontend:
+    container_name: frontend
+    restart: always
     build:
       context: ./client
     ports:
       - "3000:3000"
 
+  db:
+    image: mongo:4.2
+    container_name: db
+    restart: always
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_DATABASE=chat_database
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
+
   backend:
+    container_name: backend
+    restart: always
     build:
       context: ./server
     ports:
-      - "5000:5000"
+      - "8080:8080"
     depends_on:
-      - mongodb
-
-  mongodb:
-    image: mongo
-    ports:
-      - "27017:27017"
+      - db
