--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,6 +8,6 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 5000
+EXPOSE 8080
 
-CMD ["node", "src/index.js"]
+CMD ["bash", "-c", "source .env && npm run start"]
