install autocannon and create scripts to run node in cluster or not

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,4 @@
+CLUSTER_MODE=false
 SERVER_PORT=8080
 TOKEN_SECRET=SEGREDO_SUPER_SECRETO
 MONGO_URL="mongodb://[USER_ROOT]:[SENHA_ROOT]@[HOST]:27017/[DATABASE]?authSource=admin"
